GNOME Bugzilla – Bug 699337
v4l2: fix and cleanup VIDIOC_EXPBUF handling
Last modified: 2013-05-01 13:43:12 UTC
Created attachment 242947 [details] [review] patch With this patch VIDIOC_EXPBUF actually works, or a correct warning is printed. However the whole DMABUF code is currently broken. V4L2_MEMORY_DMABUF is an alternative to V4L2_MEMORY_USERPTR that can be used to queue other DMABUF file descriptors. To create new DMABUF file descriptors V4L2_MEMORY_MMAP + VIDIOC_EXPBUF must be used. The two modes cannot be mixed. Right now QBUF fails because the device is configured for MMAP and a DMABUF buffer is queued.
commit eebe5fc70df56762b7f4729c4dbbc87f1748951f Author: Michael Olbrich <m.olbrich@pengutronix.de> Date: Tue Apr 30 13:07:37 2013 +0200 v4l2: fix and cleanup VIDIOC_EXPBUF handling clear the struct, and provide a correct error message https://bugzilla.gnome.org/show_bug.cgi?id=699337