v4l2: fix and cleanup VIDIOC_EXPBUF handling

clear the struct, and provide a correct error message

https://bugzilla.gnome.org/show_bug.cgi?id=699337